update Block, Entry, sql

--- a/mumsched/src/main/resources/messages.properties
+++ b/mumsched/src/main/resources/messages.properties
@@ -12,8 +12,8 @@ menu.schedule=Schedule
 menu.schedule.view=View Schedule
 menu.schedule.generate=Generate Schedule
 menu.student=Student
-menu.student.viewschedule=View Schedule
-menu.student.view=View Student
+menu.student.viewschedule=Manage Student Profile
+menu.student.view=Manage Student Profile
 menu.student.register=Course Registration
 
 # Schedule information
@@ -43,7 +43,7 @@ entry.createEntry = Create Entry
 entry.model.title = Entry
 entry.delete = Delete Entry
 entry.block = Block
-entry.modal.invalidinput.content = All field are require
+entry.modal.invalidinput.content = All field are required
 entry.modal.invalidinput.title = Invalid input entry
 
 # Course information
@@ -56,7 +56,7 @@ course.action=Action
 course.modal.title=Course
 course.modal.delete=Delete Course
 course.edit=Edit Course
-course.modal.invalidinput.content = Course name, course code are require
+course.modal.invalidinput.content = Course name, course code are required
 course.modal.invalidinput.title = Invalid input course
 
 #Faculty
@@ -103,7 +103,7 @@ block.endDate = End Date
 block.entry = Entry
 block.title = Block
 block.delete = Delete Block
-block.modal.invalidinput.content = Block name, start date, end date are require
+block.modal.invalidinput.content = Block name, start date, end date are required
 block.modal.invalidinput.title = Invalid input block
 
 #Student
@@ -124,6 +124,8 @@ student.grade=Result
 student.profile=Profile
 student.transcript=Transcript
 student.entry=Entry
+student.modal.invalidinput.content=First Name, Last Name, DOB, Email are required
+student.modal.invalidinput.title=Invalid input
 
 NotEmpty.student.firstName=First name can not be blank.
 NotEmpty.student.lastName=Last name can not be blank.
